# hsbirthdays

./: Birthday.hs  CHANGELOG.md  LICENSE  hsbirthdays.cabal  hsbirthdays.example
.github/workflows/: haskell-ci.yml
