cabal-version: 3.0
name: hsbirthdays
version: 1.1
license: BSD-3-Clause
license-file: LICENSE
author: Andres Loeh
maintainer: hsbirthdays@andres-loeh.de
build-type: Simple
extra-doc-files: CHANGELOG.md
data-files: hsbirthdays.example
tested-with: GHC==9.10.1, GHC==9.8.4, GHC==9.6.6, GHC==9.2.8

executable hsbirthdays
  ghc-options: -Wall
  build-depends:
    base >= 4.15 && < 5,
    mtl >= 2.1 && < 3,
    old-time >= 1.1 && < 2
  default-language: Haskell2010
  main-is: Birthday.hs
  other-modules: PackageInfo_hsbirthdays
